TestSuite/errors/err0347_sizeof_IntPtr.pas
begin
  var sz := sizeof(System.IntPtr);
end.